After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695375 - GtkEntryAccessible: also handle entry icon tooltip NULL in notify_gtk.
GtkEntryAccessible: also handle entry icon tooltip NULL in notify_gtk.
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-03-07 17:04 UTC by Alban Browaeys
Modified: 2013-03-17 20:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkEntryAccessible: also handle entry icon tooltip NULL in notify_gtk. (2.16 KB, patch)
2013-03-07 17:04 UTC, Alban Browaeys
needs-work Details | Review
GtkEntryAccessible: also handle entry icon tooltip NULL in notify_gtk. (2.50 KB, patch)
2013-03-15 20:42 UTC, Alban Browaeys
committed Details | Review

Description Alban Browaeys 2013-03-07 17:04:30 UTC
Created attachment 238323 [details] [review]
GtkEntryAccessible: also handle entry icon tooltip NULL in notify_gtk.

To clear the tooltip one is to set the tooltip to NULL. Though
    the GtkEntryAccessible expect this tooltip to not be NULL in
    gtk_entry_accessible_notify_gtk (already handling this case
     in its _init).
    
    Fixes:
    ** (epiphany:23914): CRITICAL **: atk_object_set_description: assertion
    `description != NULL' failed
    when epiphany g_object_set the entry icon tooltip to NULL (clear the
    tooltip) in its find bar.
Comment 1 Cosimo Cecchi 2013-03-07 18:40:51 UTC
Review of attachment 238323 [details] [review]:

::: gtk/a11y/gtkentryaccessible.c
@@ +578,1 @@
                                       text);

Reading the docs for atk_object_set_description, I think you should pass "" as description for the NULL case, otherwise it won't be cleared when the tooltip text is reset.
Comment 2 Alban Browaeys 2013-03-15 20:42:05 UTC
Created attachment 239008 [details] [review]
GtkEntryAccessible: also handle entry icon tooltip NULL in notify_gtk.

Thanks I was afraid to trigger a new voice read by setting the description to "". Attached is the new patch that set the description to the empty string instead of plain discarding the update.
Comment 3 Cosimo Cecchi 2013-03-15 21:01:38 UTC
Review of attachment 239008 [details] [review]:

Looks good to me
Comment 4 Matthias Clasen 2013-03-17 20:12:23 UTC
Attachment 239008 [details] pushed as da961b7 - GtkEntryAccessible: also handle entry icon tooltip NULL in notify_gtk.